--- a/learning/usdaapi/index.html
+++ b/learning/usdaapi/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Hello AngularJS</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
-    	<script src="script.js"></script>
+    	<script src="hello.js"></script>
 	</head>
 
 	<body>
