--- a/project_main/src/main/webapp/index.html
+++ b/project_main/src/main/webapp/index.html
@@ -1,10 +1,125 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="tr">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>FatApp</title>
+	<meta name="description" content="">
+	<meta name="application-name" content="FatApp" />
+	<meta name="keywords" content="" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<!-- Latest compiled JavaScript -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+	<link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-<h1>Hello World! from amazon AWS</h1>
+	<div class="container-fluid">
+		<div class="row">
+			<nav class="navbar navbar-default">
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<a class="navbar-brand" href="index.html">Fitness Calc</a>
+					</div>
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="report.html">My Stats</a></li>
+						<li><a href="#">My Goals</a></li>
+						<li><a href="#">My Nutritient Fullfilment Analysis</a></li>
+						<li><a href="#">My Account</a></li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+	</div>
+	<div class="container content">
+		<div class="row" style="">
+			<div class="col-sm-12 col-md-6">
+				<button class="btn btn-default btn-sm prev-day-button"> Previous day</button>
+			 <input type="text" id="datepicker" disabled="true" style="background: none; border: none; font-size:1.5vmax;">
+			 <button class="btn btn-default btn-sm next-day-button"> Next day</button>
+		</div>
+		</div>
+
+				<div class="col-md-12 form-panel" id="add-food-panel" style="display:none">
+					<div class="panel panel-primary">
+						<div class="panel-heading">Add food to meal
+							<span class="pull-right glyphicon glyphicon-remove close-food-panel"></span></div>
+						<div class="panel-body">
+							<div class="col-sm-8">
+								<input type="text" class="form-control" id="food-search-input" placeholder="Type to search">
+							</div>
+							<div class="col-sm-4">
+							<button class="btn btn-primary" id='search-button'>Search food</button>
+							</div>
+							<div class="col-sm-12">
+								<div class="search-result-panel" style="display:none">
+									<ul class="list-group search-result-list">
+										<!--Food search content comes here -->
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+	</div>
+	</div>
+
+
+<!--================================== TEMLATES ===========================-->
+<li class="list-group-item food-li-template" data-food-db-no="" data-amount="" data-unit="" data-label="" style="transform: scale(1); display: none">
+    <i class="fa fa-cutlery" style="padding: 5px;"></i>
+    <span class="food-label" style="display: inline-block; width: 80%;"> MILK PEANUT SOUP, (AGV)
+      <span class="per-tag">340 g</span>
+    </span>
+    <span class="pull-right glyphicon glyphicon-remove food-saved-remove">
+    </span>
+</li>
+
+<div class="row day-container-template" style="display: none">
+	<div class="col-md-8 day-row breakfast">
+		<span class="inline-h4">Breakfast</span>
+		<button class="btn btn-default add-food-button"> Add Food</button>
+	<hr/>
+	<ul class="col-md-12 added-food"></ul>
+	</div>
+		<div class="col-md-8 day-row lunch">
+	<span class="inline-h4">Lunch</span>
+	<button class="btn btn-default add-food-button"> Add Food</button>
+	<hr/>
+		<ul class="col-md-12 added-food"></ul>
+</div>
+		<div class="col-md-8 day-row dinner">
+	<span class="inline-h4">Dinner</span>
+	<button class="btn btn-default add-food-button"> Add Food</button>
+	<hr/>
+		<ul class="col-md-12 added-food"></ul>
+</div>
+<div class="col-md-8 day-row snack">
+<span class="inline-h4">Snack</span>
+<button class="btn btn-default add-food-button"> Add Food</button>
+<hr/>
+<ul class="col-md-12 added-food"></ul>
+</div>
+<div class="col-md-8 day-row exercise">
+<span class="inline-h4">Exercise</span>
+<button class="btn btn-default add-exercise">Add exercise</button>
+<hr/>
+<ul class="col-md-12 added-exercise"></ul>
+</div>
+</div>
+
+<!--================================== TEMLATES ===========================-->
+
 </body>
+<script src="main.js"></script>
+
 </html>
