Food Object has been refactored

--- a/project_main/src/main/webapp/index.html
+++ b/project_main/src/main/webapp/index.html
@@ -18,10 +18,11 @@
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
-	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
+<!--MENU-->
 	<div class="container-fluid">
 		<div class="row">
 			<nav class="navbar navbar-default">
@@ -40,6 +41,7 @@
 			</nav>
 		</div>
 	</div>
+<!--end MENU-->
 	<div class="container content">
 		<div class="row" style="">
 			<div class="col-sm-12 col-md-6">
@@ -48,7 +50,6 @@
 			 <button class="btn btn-default btn-sm next-day-button"> Next day</button>
 		</div>
 		</div>
-
 				<div class="col-md-12 form-panel" id="add-food-panel" style="display:none">
 					<div class="panel panel-primary">
 						<div class="panel-heading">Add food to meal
