--- a/project_main/src/main/webapp/index.html
+++ b/project_main/src/main/webapp/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="tr">
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>FatApp</title>
-	<meta name="description" content="">
-	<meta name="application-name" content="FatApp" />
-	<meta name="keywords" content="" />
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -18,30 +16,29 @@
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css\style.css" />
 </head>
 
 <body>
-<!--MENU-->
 	<div class="container-fluid">
 		<div class="row">
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html">Fitness Calc</a>
+						<a class="navbar-brand" href="index.html">FatApp</a>
 					</div>
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="report.html">My Stats</a></li>
-						<li><a href="#">My Goals</a></li>
-						<li><a href="#">My Nutritient Fullfilment Analysis</a></li>
 						<li><a href="#">My Account</a></li>
 					</ul>
+
+
+
 				</div>
 			</nav>
 		</div>
 	</div>
-<!--end MENU-->
 	<div class="container content">
 		<div class="row" style="">
 			<div class="col-sm-12 col-md-6">
@@ -50,6 +47,7 @@
 			 <button class="btn btn-default btn-sm next-day-button"> Next day</button>
 		</div>
 		</div>
+
 				<div class="col-md-12 form-panel" id="add-food-panel" style="display:none">
 					<div class="panel panel-primary">
 						<div class="panel-heading">Add food to meal
@@ -71,6 +69,7 @@
 						</div>
 					</div>
 				</div>
+
 	</div>
 	</div>
 
@@ -110,17 +109,43 @@
 <hr/>
 <ul class="col-md-12 added-food"></ul>
 </div>
-<div class="col-md-8 day-row exercise">
-<span class="inline-h4">Exercise</span>
-<button class="btn btn-default add-exercise">Add exercise</button>
+
+<div class="col-md-8 day-row exercise" style="min-height: 500px">
+<span class="inline-h4">Activity</span>
+<button class="btn btn-default add-exercise">Add Activity</button>
 <hr/>
-<ul class="col-md-12 added-exercise"></ul>
+<ul class="col-md-12 added-exercise">
+<!--added exercise comes here -->
+	</ul>
+<div class="col-md-12 form-panel" id="add-exercise-panel" style="display:none">
+	<div class="panel panel-primary">
+		<div class="panel-heading"> Add Activity
+			<span class="pull-right glyphicon glyphicon-remove close-exercise-panel"></span></div>
+		<div class="panel-body">
+			<div class="col-sm-8">
+				<input type="text" class="form-control" id="exercise-search-input" placeholder="Type to search">
+			</div>
+			<div class="col-sm-4">
+			<button class="btn btn-primary" id='search-button'>Search Activities</button>
+			</div>
+			<div class="col-sm-12">
+				<div class="search-result-panel-exercise" style="display:none">
+					<ul class="list-group search-result-list-exercise">
+						<!--exercise search content comes here -->
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 </div>
 </div>
 
 <!--================================== TEMLATES ===========================-->
 
 </body>
-<script src="main.js"></script>
+<link rel="stylesheet" href="bootstrap-notify-3.1.3/animate.css">
+<script src="bootstrap-notify-3.1.3/bootstrap-notify.min.js"></script>
+<script src="js\main.js"></script>
 
 </html>
