--- a/project_main/src/main/webapp/index.html
+++ b/project_main/src/main/webapp/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!-- Latest compiled JavaScript -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+	<!--<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>-->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
@@ -144,8 +144,9 @@
 <!--================================== TEMLATES ===========================-->
 
 </body>
-<link rel="stylesheet" href="bootstrap-notify-3.1.3/animate.css">
-<script src="bootstrap-notify-3.1.3/bootstrap-notify.min.js"></script>
+<link rel="stylesheet" href="js\lib\bootstrap-notify-3.1.3/animate.css">
+<script src="js\lib\bootstrap-notify-3.1.3/bootstrap-notify.min.js"></script>
+<script src="js\jquery-3.1.1.min.js"></script>
 <script src="js\main.js"></script>
 
 </html>
