--- a/project_main/src/main/webapp/index.html
+++ b/project_main/src/main/webapp/index.html
@@ -30,7 +30,7 @@
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="report.html">My Stats</a></li>
-						<li><a href="#">My Account</a></li>
+						<li><a href="account.html">My Account</a></li>
 					</ul>
 
 
@@ -84,6 +84,13 @@
     </span>
 </li>
 
+<li class="list-group-item exercise-li-template" data-activity-id="1" data-kcal-per-hour="817" data-minutes="100" style="transform: scale(1); display: none">
+	<i class="fa fa-bicycle" style="padding: 5px;"></i>
+	<span class="exercise-label" style="display: inline-block; width: 80%;">Cycling, mountain bike, bmx&nbsp;&nbsp;
+		<span class="per-tag">100 minutes</span>
+	</span>
+	<span class="pull-right glyphicon glyphicon-remove exercise-saved-remove"></span>
+</li>
 <div class="row day-container-template" style="display: none">
 	<div class="col-md-8 day-row breakfast">
 		<span class="inline-h4">Breakfast</span>
