--- a/project_main/src/main/webapp/report.html
+++ b/project_main/src/main/webapp/report.html
@@ -68,7 +68,7 @@
                                 <a href="#">My Stats</a>
                             </li>
                                 <li>
-                                <a href="#">My Account</a>
+                                <a href="account.html">My Account</a>
                             </li>
                         </ul>
                     </div>
